highlight images link

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="img/highlight1.png" alt="Card image">
+                    <a href="#"><img class="card-img-top" src="img/highlight1.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Webinar: Corporate Engagement Collaborations between Advancement & Career Services</a></h6>
                     </div>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="img/highlight2.png" alt="Card image">
+                    <a href="#"><img class="card-img-top" src="img/highlight2.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Spotlight:<br/> Aimee Ahmed</a></h6>
                     </div>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="img/highlight3.png" alt="Card image">
+                    <a href="#"><img class="card-img-top" src="img/highlight3.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Meet Up: Tips and tricks for gathering data for Gold Standards Survey</a></h6>
                     </div>
@@ -134,7 +134,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
+                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
@@ -142,7 +142,7 @@
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
+                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
+                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
@@ -164,7 +164,7 @@
                 <div class="col-md-1"></div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
+                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
@@ -172,7 +172,7 @@
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
+                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
@@ -180,7 +180,7 @@
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
+                    <a href="#"><img class="card-img-top" src="img/image_placeholder.png" alt="Card image"></a>
                     <div class="card-body">
                       <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
