--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="d-flex flex-column h-100">
     <header>
       <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light d-flex justify-content-between">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light d-lg-flex justify-content-lg-between">
         <div>
           <a class="navbar-brand" href="index.html"><img class="logo" src="img/logo.png" alt="NACRO logo"></a>
         </div>
@@ -62,6 +62,7 @@
     <main role="main" class="flex-shrink-0">
       <div class="container w-100">
 
+        <!-- Intro slideshow -->
         <div id="carouselImages" class="carousel slide carousel-fade" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselImages" data-slide-to="0" class="active"></li>
@@ -91,6 +92,7 @@
 
         <hr>
 
+        <!-- Highlights section -->
         <h1>Highlights</h1>
         <div id="carouselHighlights" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -203,6 +205,7 @@
 
         <hr>
 
+        <!-- Join connect grow section -->
         <div class="container">
           <div class="row">
             <div class="col">
@@ -221,6 +224,7 @@
 
         <hr>
 
+        <!-- Annual conference section -->
         <div class="container">
           <div class="row">
             <div class="col-lg-7">
@@ -243,6 +247,7 @@
 
         <hr>
 
+        <!-- Member insights section -->
         <div id="carouselInsights" class="carousel slide" data-ride="carousel">
           <h2 class="text-center">Member Insights</h2>
           <br/>
