--- a/index.html
+++ b/index.html
@@ -26,24 +26,66 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">About &emsp;</a>
+            <ul class="navbar-nav justify-content-end">
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  About
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">About Us</a>
+                  <a class="dropdown-item" href="#">Board of Directors</a>
+                  <a class="dropdown-item" href="#">Committees</a>
+                  <a class="dropdown-item" href="#">Election Process</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Membership
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Join Today</a>
+                  <a class="dropdown-item" href="#">Member Benefits</a>
+                  <a class="dropdown-item" href="#">NACRO Impact Program</a>
+                  <a class="dropdown-item" href="#">Member Awards</a>
+                  <a class="dropdown-item" href="#">FAQs</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Events
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="conference.html">2020 Virtual Conference</a>
+                  <a class="dropdown-item" href="#">Upcoming Events</a>
+                  <a class="dropdown-item" href="#">Past Conferences</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Resources
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Best Practices</a>
+                  <a class="dropdown-item" href="#">Blog</a>
+                  <a class="dropdown-item" href="#">Gold Standards Survey</a>
+                  <a class="dropdown-item" href="#">Job Board</a>
+                  <a class="dropdown-item" href="#">Newsletter</a>
+                  <a class="dropdown-item" href="#">Publications</a>
+                  <a class="dropdown-item" href="#">Videos</a>
+                  <div class="dropdown-divider"></div>
+                  <h6>Member Only Content</h6>
+                  <a class="dropdown-item" href="#">2019 Research Report</a>
+                  <a class="dropdown-item" href="#">Member Directory</a>
+                  <a class="dropdown-item" href="#">Metric Toolbox</a>
+                  <a class="dropdown-item" href="#">NACRO Toolkit</a>
+                  <a class="dropdown-item" href="#">Recorded Virtual Events</a>
+                  <a class="dropdown-item" href="#">Salary Survey Tool</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Membership &emsp;</a>
+                <a class="nav-link" href="#"><button class="btn btn-dark btn-sm my-2 my-sm-0">Join Now</button></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Events &emsp;</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Resources &emsp;</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#"><button class="btn btn-outline-dark my-2 my-sm-0">Join Now</button></a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#"><button class="btn btn-outline-dark my-2 my-sm-0">Login</button></a>
+                <a class="nav-link" href="#"><button class="btn btn-outline-dark btn-sm my-2 my-sm-0">Login</button></a>
               </li>
               <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
