--- a/upcoming.html
+++ b/upcoming.html
@@ -37,39 +37,78 @@
   <body class="d-flex flex-column h-100">
     <header>
       <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-        <a class="navbar-brand" href="index.html"><img class="logo" src="img/logo.png" alt="NACRO logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Membership</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Events</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Resources</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#"><button class="btn btn-outline-dark my-2 my-sm-0">Join Now</button></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#"><button class="btn btn-outline-dark my-2 my-sm-0">Login</button></a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
-          </ul>
-          <!-- <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form> -->
+      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light d-md-flex justify-content-md-between">
+        <div>
+          <a class="navbar-brand" href="index.html"><img class="logo" src="img/logo.png" alt="NACRO logo"></a>
+        </div>
+        <div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav justify-content-end">
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  About
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">About Us</a>
+                  <a class="dropdown-item" href="#">Board of Directors</a>
+                  <a class="dropdown-item" href="#">Committees</a>
+                  <a class="dropdown-item" href="#">Election Process</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Membership
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Join Today</a>
+                  <a class="dropdown-item" href="#">Member Benefits</a>
+                  <a class="dropdown-item" href="#">NACRO Impact Program</a>
+                  <a class="dropdown-item" href="#">Member Awards</a>
+                  <a class="dropdown-item" href="#">FAQs</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Events
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="conference.html">2020 Virtual Conference</a>
+                  <a class="dropdown-item" href="upcoming.html">Upcoming Events</a>
+                  <a class="dropdown-item" href="#">Past Conferences</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Resources
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Best Practices</a>
+                  <a class="dropdown-item" href="#">Blog</a>
+                  <a class="dropdown-item" href="#">Gold Standards Survey</a>
+                  <a class="dropdown-item" href="#">Job Board</a>
+                  <a class="dropdown-item" href="#">Newsletter</a>
+                  <a class="dropdown-item" href="#">Publications</a>
+                  <a class="dropdown-item" href="#">Videos</a>
+                  <div class="dropdown-divider"></div>
+                  <h6>Member Only Content</h6>
+                  <a class="dropdown-item" href="#">2019 Research Report</a>
+                  <a class="dropdown-item" href="#">Member Directory</a>
+                  <a class="dropdown-item" href="#">Metric Toolbox</a>
+                  <a class="dropdown-item" href="#">NACRO Toolkit</a>
+                  <a class="dropdown-item" href="#">Recorded Virtual Events</a>
+                  <a class="dropdown-item" href="#">Salary Survey Tool</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#"><button class="btn btn-dark btn-sm my-2 my-sm-0">Join Now</button></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#"><button class="btn btn-outline-dark btn-sm my-2 my-sm-0">Login</button></a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
