--- a/conference.html
+++ b/conference.html
@@ -12,6 +12,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/home.css" rel="stylesheet">
+    <link href="css/conference.css" rel="stylesheet">
     link href="css/conference.css" rel="stylesheet">
 
     <style>
@@ -91,7 +92,7 @@
                   <a class="dropdown-item" href="#">Publications</a>
                   <a class="dropdown-item" href="#">Videos</a>
                   <div class="dropdown-divider"></div>
-                  <h6>Member Only Content</h6>
+                  <span class="dropdown-item-text text-muted"><small><strong>Member Only Content</strong></small></span>
                   <a class="dropdown-item" href="#">2019 Research Report</a>
                   <a class="dropdown-item" href="#">Member Directory</a>
                   <a class="dropdown-item" href="#">Metric Toolbox</a>
@@ -141,7 +142,7 @@
               </div> 
             </div>
             <div class="col-sm-1 order-2"></div>
-            <div class="col-md-7 bg-light order-md-2">
+            <div class="col-md-7 bg-light order-md-2 mb-5">
                 <div class="my-3 mx-3">
                   <h4>Program Summary</h4>
                   <p>While the in-person 2020 NACRO Annual Conference has been canceled, we’re excited to invite you to register for a half-day 
@@ -168,9 +169,14 @@
                           <div class="card">
                               <div class="card-header" id="headingOne">
                                   <h2 class="mb-0">
-                                      <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                          <svg class="bi bi-chevron-right" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/></svg>
-                                          <span>Opening Remarks and Welcome</span>
+                                      <button class="btn btn-link text-left text-toogle" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                                        </svg>  
+                                        <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
+                                        </svg>
+                                        <span>Opening Remarks and Welcome</span>
                                       </button>
                                   </h2>
                                   <span class="float-right">11:30 am - 11:50 am</span>
@@ -193,9 +199,14 @@
                           <div class="card">
                               <div class="card-header" id="headingTwo">
                                   <h2 class="mb-0">
-                                      <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                          <svg class="bi bi-chevron-right" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/></svg>
-                                          Jump-Starting America: How Breakthrough Science Can Revive Economic Growth and the American Dream
+                                      <button class="btn btn-link text-left text-toogle" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                                        </svg>  
+                                        <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
+                                        </svg>
+                                        Jump-Starting America: How Breakthrough Science Can Revive Economic Growth and the American Dream
                                       </button>
                                   </h2>
                                   <span class="float-right">11:50 am – 12:20 pm</span>
@@ -217,9 +228,14 @@
                           <div class="card">
                               <div class="card-header" id="headingThree">
                                   <h2 class="mb-0">
-                                      <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                                        <svg class="bi bi-chevron-right" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/></svg>
-                                          Addressing Diversity, Inclusion and Belonging in Higher Education
+                                      <button class="btn btn-link text-left text-toogle" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                                        </svg>  
+                                        <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
+                                        </svg>
+                                        Addressing Diversity, Inclusion and Belonging in Higher Education
                                       </button>
                                   </h2>
                                   <span class="float-right">12:30 pm  – 2:00 pm</span>
@@ -243,9 +259,14 @@
                           <div class="card">
                               <div class="card-header" id="headingFour">
                                   <h2 class="mb-0">
-                                      <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-                                        <svg class="bi bi-chevron-right" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/></svg>
-                                          Future of Universities:  What will higher education look like in 2040?
+                                      <button class="btn btn-link text-left text-toogle" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                                        </svg>  
+                                        <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
+                                        </svg>
+                                        Future of Universities:  What will higher education look like in 2040?
                                       </button>
                                   </h2>
                                   <span class="float-right">2:10 pm – 3:10 pm</span>
@@ -279,9 +300,14 @@
                           <div class="card">
                               <div class="card-header" id="headingFive">
                                   <h2 class="mb-0">
-                                      <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
-                                        <svg class="bi bi-chevron-right" width="20" height="20" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/></svg>
-                                          NACRO Business Meeting & Awards  
+                                      <button class="btn btn-link text-left text-toogle" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                                        </svg>  
+                                        <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                          <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
+                                        </svg>
+                                        NACRO Business Meeting & Awards  
                                       </button>
                                   </h2>
                                   <span class="float-right">3:10 pm - 3:30 pm</span>
