member only content padding, carousel captions

--- a/upcoming.html
+++ b/upcoming.html
@@ -93,7 +93,7 @@
                   <a class="dropdown-item" href="#">Publications</a>
                   <a class="dropdown-item" href="#">Videos</a>
                   <div class="dropdown-divider"></div>
-                  <h6>Member Only Content</h6>
+                  <h6 class="moc">Member Only Content</h6>
                   <a class="dropdown-item" href="#">2019 Research Report</a>
                   <a class="dropdown-item" href="#">Member Directory</a>
                   <a class="dropdown-item" href="#">Metric Toolbox</a>
