--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <a class="dropdown-item" href="#">Publications</a>
                   <a class="dropdown-item" href="#">Videos</a>
                   <div class="dropdown-divider"></div>
-                  <h6>Member Only Content</h6>
+                  <h6 class="moc">Member Only Content</h6>
                   <a class="dropdown-item" href="#">2019 Research Report</a>
                   <a class="dropdown-item" href="#">Member Directory</a>
                   <a class="dropdown-item" href="#">Metric Toolbox</a>
@@ -108,13 +108,22 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active" data-interval="5000">
-              <img class="d-block w-100" src="img/home_carousel1.png" alt="First slide image">
+              <img class="d-block w-100 startImage" src="img/home_carousel1.png" alt="First slide image">
+              <div class="carousel-caption d-flex justify-content-left">
+                <h5>Build Relationships</h5>
+              </div>
             </div>
             <div class="carousel-item" data-interval="5000">
-              <img class="d-block w-100" src="img/home_carousel2.png" alt="Second slide image">
+              <img class="d-block w-100 startImage" src="img/home_carousel2.png" alt="Second slide image">
+              <div class="carousel-caption d-flex justify-content-left">
+                <h5>Refine Strategies</h5>
+              </div>
             </div>
             <div class="carousel-item" data-interval="5000">
-              <img class="d-block w-100" src="img/home_carousel3.png" alt="Third slide image">
+              <img class="d-block w-100 startImage" src="img/home_carousel3.png" alt="Third slide image">
+              <div class="carousel-caption d-flex justify-content-left">
+                <h5>Attend Conferences</h5>
+              </div>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselImages" role="button" data-slide="prev">
@@ -352,7 +361,7 @@
 
     <footer class="footer mt-auto py-3">
       <div class="container">
-        <span class="text-muted d-lg-flex justify-content-lg-center">
+        <span class="text-light d-lg-flex justify-content-lg-center">
           &copy; Copyright NACRO 2020 &emsp;&emsp; 
           <a href="https://www.linkedin.com/groups/125703"><img class="footer-logo" src="img/linkedin.png" alt="LinkedIn"></a> &emsp;&emsp; 
           <a href="https://www.facebook.com/NACROCON/"><img class="footer-logo" src="img/facebook.png" alt="Facebook"></a> &emsp;&emsp; 
